--- a/preamble.tex
+++ b/preamble.tex
@@ -91,6 +91,7 @@
 %\def{\ker}{\mathrm{ker}}
 \newcommand{\im}{\mathrm{im}}
 \newcommand{\T}{\mathbb{T}}
+\newcommand{\G}{\mathbb{G}}
 
 \newcommand{\todo}[1]{\textcolor{red}{#1}}
 \newcommand{\unsure}[1]{\textcolor{blue}{#1}}
