--- a/sources.bib
+++ b/sources.bib
@@ -21,11 +21,12 @@
     VOLUME = {178},
  PUBLISHER = {Springer-Verlag, Berlin-New York},
       YEAR = {1970},
-     PAGES = {xvi+191},
    MRCLASS = {57.10 (55.00)},
   MRNUMBER = {275446},
   MRREVIEWER = {P.\ S.\ Landweber},
 }
+
+
 
 @book {lee,
     AUTHOR = {Lee, John M.},
@@ -115,11 +116,11 @@
  PUBLISHER = {Springer-Verlag, Berlin-G\"ottingen-Heidelberg; Academic
               Press, Inc., Publishers, New York},
       YEAR = {1964},
-     PAGES = {vii+148},
    MRCLASS = {57.10 (55.36)},
   MRNUMBER = {176478},
   MRREVIEWER = {E.\ Dyer},
 }
+
 
 @book {tu,
     AUTHOR = {Tu, Loring W.},
@@ -146,7 +147,7 @@
  pages = {504--537},
  publisher = {[Annals of Mathematics, Trustees of Princeton University on Behalf of the Annals of Mathematics, Mathematics Department, Princeton University]},
  title = {Groups of Homotopy Spheres: I},
- urldate = {2025-06-08},
+ urldate = {2025-05-08},
  volume = {77},
  year = {1963}
 }
@@ -194,7 +195,7 @@ MRREVIEWER = {Ian\ Hambleton},
     AUTHOR = {Milnor, John W. and Stasheff, James D.},
      TITLE = {Characteristic classes},
     SERIES = {Annals of Mathematics Studies},
-    VOLUME = {No. 76},
+    VOLUME = {76},
  PUBLISHER = {Princeton University Press, Princeton, NJ; University of Tokyo
               Press, Tokyo},
       YEAR = {1974},
@@ -228,6 +229,22 @@ MRREVIEWER = {H.\ Cartan},
   MRNUMBER = {159327},
 MRREVIEWER = {A.\ Heller},
        URL = {http://projecteuclid.org/euclid.pjm/1103036730},
+}
+
+@article {whitehead,
+    AUTHOR = {Whitehead, George W.},
+     TITLE = {Generalized homology theories},
+   JOURNAL = {Trans. Amer. Math. Soc.},
+  FJOURNAL = {Transactions of the American Mathematical Society},
+    VOLUME = {102},
+      YEAR = {1962},
+     PAGES = {227--283},
+      ISSN = {0002-9947, 1088-6850},
+   MRCLASS = {55.30},
+  MRNUMBER = {137117},
+MRREVIEWER = {S.-T.\ Hu},
+       DOI = {10.2307/1993676},
+       URL = {https://doi.org/10.2307/1993676},
 }
 
 %J. Milnor. On the cobordism ring Ω∗ and a complex analogue, part i. American Journal of
