--- a/sources.bib
+++ b/sources.bib
@@ -247,6 +247,32 @@ MRREVIEWER = {S.-T.\ Hu},
        URL = {https://doi.org/10.2307/1993676},
 }
 
+@book {switzer,
+    AUTHOR = {Switzer, Robert M.},
+     TITLE = {Algebraic topology---homotopy and homology},
+    SERIES = {Classics in Mathematics},
+      NOTE = {Reprint of the 1975 original [Springer, New York; MR0385836
+              (52 \#6695)]},
+ PUBLISHER = {Springer-Verlag, Berlin},
+      YEAR = {2002},
+     PAGES = {xiv+526},
+      ISBN = {3-540-42750-3},
+   MRCLASS = {55-02},
+  MRNUMBER = {1886843},
+}
+
+@article{brown,
+  author  = {Brown, Edgar H.},
+  title   = {Cohomology Theories},
+  journal = {Annals of Mathematics},
+  year    = {1962},
+  volume  = {75},
+  number  = {3},
+  pages   = {467--484},
+  doi     = {10.2307/1970213},
+  url     = {https://doi.org/10.2307/1970213},
+}
+
 %J. Milnor. On the cobordism ring Ω∗ and a complex analogue, part i. American Journal of
 Mathematics, 82(3):505–521, 1960.
 
