spanier carries les?

--- a/sources.bib
+++ b/sources.bib
@@ -273,6 +273,20 @@ MRREVIEWER = {S.-T.\ Hu},
   url     = {https://doi.org/10.2307/1970213},
 }
 
+@incollection {spanier,
+    AUTHOR = {Spanier, E. H.},
+     TITLE = {Duality and the suspension category},
+ BOOKTITLE = {Symposium internacional de topolog\'ia algebraica
+              {I}nternational symposium on algebraic topology},
+     PAGES = {259--272},
+ PUBLISHER = {Universidad Nacional Aut\'onoma de M\'exico and UNESCO,
+              M\'exico},
+      YEAR = {1958},
+   MRCLASS = {55.00},
+  MRNUMBER = {103465},
+MRREVIEWER = {J.-P.\ Meyer},
+}
+
 %J. Milnor. On the cobordism ring Ω∗ and a complex analogue, part i. American Journal of
 Mathematics, 82(3):505–521, 1960.
 
