--- a/sources.bib
+++ b/sources.bib
@@ -287,6 +287,19 @@ MRREVIEWER = {S.-T.\ Hu},
 MRREVIEWER = {J.-P.\ Meyer},
 }
 
+@book {adams,
+    AUTHOR = {Adams, J. F.},
+     TITLE = {Stable homotopy and generalised homology},
+    SERIES = {Chicago Lectures in Mathematics},
+      NOTE = {Reprint of the 1974 original},
+ PUBLISHER = {University of Chicago Press, Chicago, IL},
+      YEAR = {1995},
+     PAGES = {x+373},
+      ISBN = {0-226-00524-0},
+   MRCLASS = {55-02 (57-02)},
+  MRNUMBER = {1324104},
+}
+
 %J. Milnor. On the cobordism ring Ω∗ and a complex analogue, part i. American Journal of
 Mathematics, 82(3):505–521, 1960.
 
