cobordism vorerst done. vermutlich noch so 5mal drueber lesen und dinge fixen

--- a/preamble.tex
+++ b/preamble.tex
@@ -60,6 +60,7 @@
 
 \theoremstyle{plain}
 \newtheorem{theorem}[definition]{Theorem}
+\newtheorem{theodef}[definition]{Theorem/Definition}
 \newtheorem{proposition}[definition]{Proposition}
 \newtheorem{lemma}[definition]{Lemma}
 \newtheorem{corollary}[definition]{Corollary}
